Improved Kafak Error Handling
1) In the event of an exception in the SynchronousConsumer the time
   between retries increases exponentially, with a ceiling.
2) If the number of exceptions exceeds a configurable maximum within
   a time window, the consumer transitions to a unrecoverable state.
3) If an unrecoverable error has occurred, the SynchronousConsumer can
   optionally trigger a graceful shutdown of the Jetty Server.

--- a/dropwizard-extra-kafka/src/test/resources/yaml/consumer.yaml
+++ b/dropwizard-extra-kafka/src/test/resources/yaml/consumer.yaml
@@ -8,3 +8,8 @@ partitions:
   foo: 1
   bar: 2
 rebalanceRetries: 5
+intialDelayforRecovery: 500ms
+maximumDelayforRecovery: 5m
+durationForResettingErrorHandlingState: 2m
+maximumErrorRecoveryAttempts: 5
+shutDownServerOnUnrecoverableError: false
