--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <jersey.version>1.12</jersey.version>
     <dropwizard.version>0.6.2</dropwizard.version>
     <scala.version>2.9.1</scala.version>
+    <mockito.version>1.9.5</mockito.version>
   </properties>
 
   <organization>
