--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.datasift.dropwizard</groupId>
     <artifactId>dropwizard-extra</artifactId>
-    <version>0.6.2-5</version>
+    <version>0.6.2-6-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
