--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
   <groupId>com.datasift.dropwizard</groupId>
   <artifactId>dropwizard-extra</artifactId>
-  <version>0.6.2-6-SNAPSHOT</version>
+  <version>0.6.2-5-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Dropwizard Extra</name>
@@ -91,6 +91,14 @@
     <developerConnection>scm:git:git@github.com:datasift/dropwizard-extra</developerConnection>
     <url>https://github.com/datasift/dropwizard-extra</url>
   </scm>
+
+  <distributionManagement>
+    <site>
+      <id>github</id>
+      <name>GitHub Pages Site</name>
+      <url>gitsite:git@github.com/datasift/dropwizard-extra.git</url>
+    </site>
+  </distributionManagement>
 
   <modules>
     <module>dropwizard-extra-core</module>
