--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <dropwizard.version>0.7.0-SNAPSHOT</dropwizard.version>
-    <scala.version>2.9.1</scala.version>
+    <dropwizard.version>0.7.0</dropwizard.version>
   </properties>
 
   <organization>
@@ -105,7 +104,6 @@
     <module>dropwizard-extra-curator</module>
     <module>dropwizard-extra-hbase</module>
     <module>dropwizard-extra-kafka</module>
-    <module>dropwizard-extra-scala</module>
     <module>dropwizard-extra-zookeeper</module>
     <module>dropwizard-extra-util</module>
   </modules>
@@ -113,7 +111,7 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>com.codahale.dropwizard</groupId>
+        <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-core</artifactId>
         <version>${dropwizard.version}</version>
       </dependency>
@@ -148,7 +146,7 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>com.codahale.dropwizard</groupId>
+        <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-testing</artifactId>
         <version>${dropwizard.version}</version>
         <scope>test</scope>
