Tidy up POM contributors section

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
       <url>https://github.com/nicktelford</url>
       <organization>DataSift Inc.</organization>
       <organizationUrl>http://datasift.com</organizationUrl>
-      <timezone>0</timezone>
+      <timezone>Europe/London</timezone>
       <roles>
         <role>architect</role>
         <role>developer</role>
@@ -51,14 +51,23 @@
     </developer>
     <developer>
       <name>Jairam Chandar</name>
-      <email>jairam.chandar@gmail.com</email>
       <url>https://github.com/jairamc</url>
       <organization>DataSift Inc.</organization>
       <organizationUrl>http://datasift.com</organizationUrl>
-      <timezone>0</timezone>
+      <timezone>Europe/London</timezone>
       <roles>
         <role>developer</role>
       </roles>
+    </developer>
+    <developer>
+        <name>Alistair Bastian</name>
+        <url>https://github.com/bastianal</url>
+        <organization>DataSift Inc.</organization>
+        <organizationUrl>http://datasift.com</organizationUrl>
+        <timezone>Europe/London</timezone>
+        <roles>
+            <role>developer</role>
+        </roles>
     </developer>
   </developers>
 
@@ -136,7 +145,7 @@
       <dependency>
         <groupId>org.powermock</groupId>
         <artifactId>powermock-module-junit4</artifactId>
-        <version>1.4.12</version>
+        <version>1.5.4</version>
         <scope>test</scope>
       </dependency>
       <dependency>
