--- a/dropwizard-extra-examples/pom.xml
+++ b/dropwizard-extra-examples/pom.xml
@@ -6,11 +6,13 @@
         <artifactId>dropwizard-extra</artifactId>
         <groupId>com.datasift.dropwizard</groupId>
         <version>0.7.0-1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.datasift.dropwizard.examples</groupId>
-    <artifactId>dropwizard-examples</artifactId>
+    <artifactId>dropwizard-extra-examples</artifactId>
     <version>0.7.0-1-SNAPSHOT</version>
 
     <dependencies>
@@ -19,13 +21,6 @@
             <artifactId>dropwizard-core</artifactId>
             <version>0.7.0</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.9.2</artifactId>
-            <version>0.8.1</version>
-        </dependency>
-
         <dependency>
             <groupId>com.maxmind.geoip</groupId>
             <artifactId>geoip-api</artifactId>
@@ -35,6 +30,16 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.datasift.dropwizard</groupId>
+            <artifactId>dropwizard-extra-zookeeper</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.datasift.dropwizard</groupId>
+            <artifactId>dropwizard-extra-kafka</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
