--- a/dropwizard-extra-kafka7/pom.xml
+++ b/dropwizard-extra-kafka7/pom.xml
@@ -22,6 +22,16 @@
         <scala.version>2.9.1</scala.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.3.4</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>io.dropwizard</groupId>
