--- a/dropwizard-extra-zookeeper/pom.xml
+++ b/dropwizard-extra-zookeeper/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.datasift.dropwizard</groupId>
     <artifactId>dropwizard-extra</artifactId>
-    <version>0.7.1-1-SNAPSHOT</version>
+    <version>0.7.1-1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
